Add support for Java 9
ClojureScript depends on xml bindings provided by the Java SDK, but in Java 9,
this library has been deprecated and removed by default.

The JVM flag of `--add-modules java.xml.bind` restores this library and
conditionally adds this dependency for Java 9, but doesn't break anyone still
using Java 8 (since Prod + most devs are still on Java 8 right now).

Context: https://github.com/bhauman/lein-figwheel/issues/612